tests/samples/invalid/invalid_escape_empty.pn
fn foo()
{
	var x = "Is \u{} a valid escape?";
}
